Cases Info trigger z-index issue fixed. About extra italic effect removed.

--- a/app/scss/modules/_nav-menu.scss
+++ b/app/scss/modules/_nav-menu.scss
@@ -1,5 +1,5 @@
 #main-menu {
-	z-index: 10000;
+	z-index: 11;
 	position: fixed;
 	right: 0;
 	width: 100%;
@@ -8,7 +8,6 @@
 	// background-color: #fff;
 	// overflow: hidden;
 	color: $black-gray;
-	z-index: 11;
 	transition: all 900ms cubic-bezier(0.33, 0, 0.140, 1.000);
 	transition-delay: 450ms;
 
@@ -57,7 +56,6 @@
 				height: 100%;
 				line-height: 140px;
 			}
-
 		}
 
 		a {
@@ -68,9 +66,7 @@
 					font-size: 2em;
 				}
 			}
-
 		}
-
 	}
 
 	.toggle-wrap {
@@ -292,7 +288,7 @@
 }
 
 #menu-window {
-	z-index: 1000;
+	z-index: 10;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -302,7 +298,6 @@
 	color: $menu-text-gray;
 	background-color: $menu-bg;
 	pointer-events: none;
-	z-index: 10;
 	transition: transform 1200ms cubic-bezier(0.33, 0, 0.140, 1.000);
 	transition-delay: 100ms;
 	transform: translate(0%, 100%);
