--- a/app/scss/views/_cases.scss
+++ b/app/scss/views/_cases.scss
@@ -547,7 +547,7 @@
 
 #case-info-trigger{
 	cursor: pointer;
-	z-index: 20;
+	// z-index: 20;
 	position: fixed;
 	bottom: 60px;
 	right: 15px;
@@ -562,7 +562,8 @@
 	text-align: center;
 	line-height: 50px;
 	color: #fff;
-	@include transitions-ease(1s);
+	// @include transitions-ease(1s);
+	transition: bottom 1s cubic-bezier(.3,0,.2,1), z-index 0s cubic-bezier(.3,0,.2,1) 1s;
 
 	@include desktop {
 		display: none;
@@ -601,9 +602,12 @@
 	}
 
 	&.opened{
+		transition: bottom 1s cubic-bezier(.3,0,.2,1);
+		z-index: 20;
 		bottom: 18px;
 
 		&:before, &:after{opacity: 1;}
+		.label{@include translate(0,-25px);}
 		.active-bg{@include translate(0,0);}
 	}
 }
